--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -5,3 +5,4 @@ CONTAINER_PREFIX=${USER}
 OPENAI_API_KEY=${OPENAI_API_KEY}
 TOGETHER_API_KEY=${TOGETHER_API_KEY}
 ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+MAILCHIMP_API_KEY=${MAILCHIMP_API_KEY}
