--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -38,4 +38,4 @@ CMD ["/app/run_fastagency.sh"]
 
 # Run the container
 
-# docker run --rm -d --name deploy_fastagency -e OPENAI_API_KEY=$OPENAI_API_KEY  -p 8008:8008 -p 8888:8888  deploy_fastagency
+# docker run --rm -d --name deploy_fastagency -e OPENAI_API_KEY=$OPENAI_API_KEY -e MAILCHIMP_API_KEY=$MAILCHIMP_API_KEY -p 8008:8008 -p 8888:8888  deploy_fastagency
