--- a/.github/workflows/deploy_to_fly_io.yml
+++ b/.github/workflows/deploy_to_fly_io.yml
@@ -11,7 +11,7 @@ env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
-  FASTAPI_URL: ${{ variables.FASTAPI_URL }}
+  FASTAPI_URL: ${{ vars.FASTAPI_URL }}
 
 jobs:
   deploy:
